--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,12 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "test:notifications": "node test-notifications.js",
+    "test:email": "node test-notifications.js email",
+    "test:whatsapp": "node test-notifications.js whatsapp",
+    "setup:email": "node add-email-password.js",
+    "debug:notifications": "node debug-notifications.js"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +25,8 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.0",
-    "multer": "^2.0.1"
+    "multer": "^2.0.1",
+    "nodemailer": "^6.9.15",
+    "twilio": "^5.3.5"
   }
 }
