Your commit message here

--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --force",
+    "clean": "powershell -Command \"if (Test-Path 'node_modules\\.vite-temp') { Remove-Item -Path 'node_modules\\.vite-temp' -Recurse -Force }; if (Test-Path 'node_modules\\.vite') { Remove-Item -Path 'node_modules\\.vite' -Recurse -Force }\"",
     "build": "tsc && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
